# image-explorer

./: Dockerfile  README.md  pyproject.toml  rename-package.sh
.githooks/: pre-commit
.github/workflows/: build_docs.yml  deploy_docs.yml  pipeline.yml  test.yml
data/images/: test.txt
docs/: Makefile  conf.py  index.rst
docs/sources/: modules.rst  mypackage.rst  phenocam.rst
notebooks/: Defisheye.md
src/app/: index.html  sketch.js
src/mypackage/: __init__.py  __main__.py  module.py
src/phenocam/: __init__.py  __main__.py  pipeline_luigi.py
src/phenocam/data/: api.py  db_config.py  vectorstore.py
src/phenocam/features/: utils.py
src/phenocam/image/: defisheye.py  slice.py
src/phenocam/visualisation/: app.py
tests/: conftest.py  test_api.py  test_defisheye.py  test_features_utils.py  test_module.py  test_slice.py  test_vector_store.py
